--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.container{
+  gap: 10px;
+  background-color: #faefff; ;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 100vh;
+}
